--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -2,7 +2,12 @@
 %% 
 \cleardoubleoddpage%  Make sure to start each chapter on a new odd page
 \chapter{Introduction}
-
+Respiratory diseases are a leading cause of premature mortality worldwide. With over four million annual deaths attributed to these diseases, early identification and treatment efforts are imperative~\cite{ferkol2014global}. The use of chest auscultation, a technique in which respiratory sounds are analyzed with instruments like stethoscopes, is a simple and effective way for diagnosing respiratory diseases. \\
+Automated systems for detecting sound anomalies have become of increasing relevance in the medical field and are driving machine learning research~\cite{bohadana2014fundamentals}. They have the potential to improve diagnostic accuracy for healthcare professionals and provide initial assessments for patients, ultimately leading to more efficient allocation of healthcare resources. 
+% Stethoscope got digital -> automation possible
+% Write about how to spot anomalies in the sounds and how it can be automated
+% Why it is of benefit to use only healthy sounds for training: The importance of semi-supervised learning
+% Mention semi-supervised so I can talk abo∏ut it in preprocessing
 
 \section{Motivation}
 
