--- a/references.bib
+++ b/references.bib
@@ -67,3 +67,23 @@
   year={2006},
   publisher={Chance Project}
 }
+
+@inproceedings{germain2015made,
+  title={Made: Masked autoencoder for distribution estimation},
+  author={Germain, Mathieu and Gregor, Karol and Murray, Iain and Larochelle, Hugo},
+  booktitle={International conference on machine learning},
+  pages={881--889},
+  year={2015},
+  organization={PMLR}
+}
+
+@article{ferkol2014global,
+  title={The global burden of respiratory disease},
+  author={Ferkol, Thomas and Schraufnagel, Dean},
+  journal={Annals of the American Thoracic Society},
+  volume={11},
+  number={3},
+  pages={404--406},
+  year={2014},
+  publisher={American Thoracic Society}
+}
