--- a/01-introduction.tex
+++ b/01-introduction.tex
@@ -19,6 +19,8 @@ Automated systems for detecting sound anomalies have become of increasing releva
 % Introduce methods shortly
 % Objectives
 
+% should showcase existing anomaly detection approaches to respiratory sound analysis and give an outlook which methods might work better and which ones to pursue trying out
+
 \section{Outline}
 
 
