--- a/02-theory.tex
+++ b/02-theory.tex
@@ -11,6 +11,11 @@ First, \textit{Wheezes} are musical sounds of long duration over 100 millisecond
 The second sound of relevance are \textit{Crackles}. These non-musical sounds are brief and indicate occasional airway opening, possibly caused by secretions. They can be further subdivided into Fine Crackles and Coarse Crackles, which differ in frequency and duration. While Fine Crackles have a characteristic frequency of about 650 Hz and last about 5 milliseconds, Coarse Crackles are longer sounds of more than 15 milliseconds and occur at lower frequencies below 350 Hz~\cite{bohadana2014fundamentals}. \\
 Knowing what constitutes physiological and pathological pulmonary sounds, it is possible to pave the way for automated systems to detect them. Electronic stethoscopes can convert the sound signals from the lung to digital signals, allowing the utilization of advanced anomaly detection algorithms for computer-aided medical diagnosis.
 
+\subsection{Digital Representation of Sound}
+\subsubsection{Waveform}
+\subsubsection{Mel-Spectrograms}
+\subsubsection{Mel-Frequency Cepstral Coefficients (MFCCs)}
+
 \section{Fundamentals of Anomaly Detection}
 Anomaly detection addresses the task of identifying deviations in data from anticipated patterns, commonly termed as anomalies or outliers~\cite{chandola2009anomaly}. These anomalies often signal deviations of a system from the norm that are potentially critical and require intervention by the system user. In healthcare, as discussed in \autoref{theory:sounds}, outliers in patient respiratory sound patterns can indicate certain conditions. \\
 To find these outliers, anomaly detection algorithms typically define a certain concept of what is considered normal, and any data point that deviates is flagged as an anomaly. The major challenge here is that anomalies are rare and usually not available on a large scale, resulting in a huge data imbalance. In addition, the distribution of anomalies remains uncertain, and even within the set of outliers there may be substantial variation, as data can exhibit various forms of non-normality~\cite{pang2021deep}. In addition, it is important to strike a balance between false positives and false negatives based on the specific application domain, as the severity of one over the other can vary significantly. Outlier detection systems must be properly calibrated to match the characteristics of the domain.\\
@@ -65,8 +70,8 @@ In anomaly detection, a model can attribute a datapoint to be normal or an anoma
 % Add graphic of a confusion matrix
 
 Having introduces this terminology, we focus on defining the used evaluation metrices.
-\subsection{Recall}
-Recall is the True Positive Rate (TPR), which can be expressed mathematically as \[ TPR=\frac{TruePositives}{TruePositives+FalseNegatives}. \] It is the proportion of anomalies correctly identified by the model. It's values range from 0 (not a single anomaly correctly detected) to 1 (perfect anomaly detection), with the goal being to maximize this metric. Especially in medical applications, where missing an anomaly can have serious implications for a patient, this value is desired to be high.
+\subsection{Sensitivity}
+Sensitivity is the True Positive Rate (TPR), which can be expressed mathematically as \[ TPR=\frac{TruePositives}{TruePositives+FalseNegatives}. \] It is the proportion of anomalies correctly identified by the model. It's values range from 0 (not a single anomaly correctly detected) to 1 (perfect anomaly detection), with the goal being to maximize this metric. Especially in medical applications, where missing an anomaly can have serious implications for a patient, this value is desired to be high.
 \subsection{False Positive Rate (FPR)}
 The FPR is a measure of the proportion of incorrect positive predictions relative to the total number of actual negatives. It is expressed mathematically as \[ FPR=\frac{FalsePositives}{TrueNegatives+FalsePositives}. \] It focuses on which normal data points are misclassified as anomalies, ranging from 0 (not a single normal sample is labeled as an anomaly) to 1 (every normal data point is labeled as an anomaly). Lower FPR values are preferred because they indicate a lower rate of false alarms.\\
 \subsection{Area Under the Curve (AUC)}
@@ -74,7 +79,7 @@ To evaluate the performance of a model, the trade-off between TPR (benefit) and 
 
 % graphic of the unit square
 
-On the unit square, point (0,0) represents a model that predicts all data to be normal, while point (1,1) represents a model that predicts all data to be anomalous. The theoretical goal is to achieve perfect classification, represented by the point (1,0). \\
+On the unit square, point (0,0) represents a model that predicts all data to be normal, while point (1,1) represents a model that predicts all data to be anomalous. The theoretical goal is to achieve perfect classification, represented by the point (1,0)~\cite{fawcett2006introduction}. \\
 The ROC curve is obtained by varying the classification threshold of a model, calculating the TPR and FPR at each threshold, plotting a point on the ROC graph, and then connecting each point with a line. Each point thereby reflects a different trade-off between TPR and FPR.
 
 % image of a roc curve
@@ -84,10 +89,10 @@ To obtain a single value that accurately encodes the insight gained form the ROC
 To illustrate the relevance of AUC as a performance measurement, let's consider an example from the field of medicine. In medical diagnostics, a high AUC value is crucial as it indicates the model's ability to accurately distinguish between patients with a specific disease and those who are healthy. This accuracy is vital for ensuring that patients who require treatment are correctly identified and treated, while at the same time avoiding unnecessary medical interventions in healthy individuals. Such a balance is essential in medical practice to provide effective care and minimize harm.
 
 \subsection{Specificity}
-Specificity, also known as the True Negative Rate (TNR), is mathematically expressed as \[ TNR=\frac{TrueNegatives}{TrueNegatives+FalsePositives} .\] This metric quantifies the proportion of normal data points correctly identified by the model. It's value ranges from 0 (every normal data point is falsely flagged as an anomaly) to 1 (perfect recognition of normal samples), with the goal of achieving a high TNR. In medical diagnostics, maintaining high specificity is essential to avoid false alarms. Together with the Recall, it can be used to calculate the Balanced Accuracy.
+Specificity, also known as the True Negative Rate (TNR), is mathematically expressed as \[ TNR=\frac{TrueNegatives}{TrueNegatives+FalsePositives} .\] This metric quantifies the proportion of normal data points correctly identified by the model. It's value ranges from 0 (every normal data point is falsely flagged as an anomaly) to 1 (perfect recognition of normal samples), with the goal of achieving a high TNR. In medical diagnostics, maintaining high specificity is essential to avoid false alarms. Together with the Sensitivity, it can be used to calculate the Balanced Accuracy.
 
 \subsection{Balanced Accuracy (BALACC)}
-Balanced Accuracy is a performance metric that equally weights the importance of correctly identifying anomalies and normal data points: \[ BALACC=0.5 \times (Recall + Specificity) \] TPR and TNR are combined in this metric to provide a more holistic view of model performance, especially in cases where datasets are unbalanced. In a highly unbalanced dataset where one class significantly outnumbers the other, which is often the case in anomaly detection since the anomaly typically occurs less frequently than normal behavior, traditional accuracy can be misleading. For example, in a data set with 95\% normal data points and only 5\% outliers, a model that always predicts the 'normal' class would achieve 95\% accuracy. By averaging both specificity and recall, the balanced accuracy in this case would be 50\%, indicating random performance. This metric has similar goals to AUC, emphasizing the importance of both reliably detecting anomalies and avoiding false alarms. This metric will be used later for better comparison with existing literature.
+Balanced Accuracy is a performance metric that equally weights the importance of correctly identifying anomalies and normal data points: \[ BALACC=0.5 \times (Sensitivity + Specificity) \] TPR and TNR are combined in this metric to provide a more holistic view of model performance, especially in cases where datasets are unbalanced. In a highly unbalanced dataset where one class significantly outnumbers the other, which is often the case in anomaly detection since the anomaly typically occurs less frequently than normal behavior, traditional accuracy can be misleading. For example, in a data set with 95\% normal data points and only 5\% outliers, a model that always predicts the 'normal' class would achieve 95\% accuracy. By averaging both specificity and Sensitivity, the balanced accuracy in this case would be 50\%, indicating random performance. This metric has similar goals to AUC, emphasizing the importance of both reliably detecting anomalies and avoiding false alarms. This metric will be used later for better comparison with existing literature.
 
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
