--- a/references.bib
+++ b/references.bib
@@ -87,3 +87,98 @@
   year={2014},
   publisher={American Thoracic Society}
 }
+
+@article{fawcett2006introduction,
+  title={An introduction to ROC analysis},
+  author={Fawcett, Tom},
+  journal={Pattern recognition letters},
+  volume={27},
+  number={8},
+  pages={861--874},
+  year={2006},
+  publisher={Elsevier}
+}
+
+@article{pramono2017automatic,
+  title={Automatic adventitious respiratory sound analysis: A systematic review},
+  author={Pramono, Renard Xaviero Adhi and Bowyer, Stuart and Rodriguez-Villegas, Esther},
+  journal={PloS one},
+  volume={12},
+  number={5},
+  pages={e0177926},
+  year={2017},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{palaniappan2013computer,
+  title={Computer-based respiratory sound analysis: a systematic review},
+  author={Palaniappan, Rajkumar and Sundaraj, Kenneth and Ahamed, Nizam Uddin and Arjunan, Agilan and Sundaraj, Sebastian},
+  journal={IETE Technical Review},
+  volume={30},
+  number={3},
+  pages={248--256},
+  year={2013},
+  publisher={Taylor \& Francis}
+}
+
+@inproceedings{rocha2018alpha,
+  title={A respiratory sound database for the development of automated classification},
+  author={Rocha, BM and Filos, Dimitris and Mendes, L and Vogiatzis, Ioannis and Perantoni, Eleni and Kaimakamis, Evangelos and Natsiavas, P and Oliveira, Ana and J{\'a}come, C and Marques, A and others},
+  booktitle={Precision Medicine Powered by pHealth and Connected Health: ICBHI 2017, Thessaloniki, Greece, 18-21 November 2017},
+  pages={33--37},
+  year={2018},
+  organization={Springer}
+}
+
+@inproceedings{jakovljevic2018hidden,
+  title={Hidden markov model based respiratory sound classification},
+  author={Jakovljevi{\'c}, Nik{\v{s}}a and Lon{\v{c}}ar-Turukalo, Tatjana},
+  booktitle={Precision Medicine Powered by pHealth and Connected Health: ICBHI 2017, Thessaloniki, Greece, 18-21 November 2017},
+  pages={39--43},
+  year={2018},
+  organization={Springer}
+}
+
+@inproceedings{chambres2018automatic,
+  title={Automatic detection of patient with respiratory diseases using lung sound analysis},
+  author={Chambres, Ga{\"e}tan and Hanna, Pierre and Desainte-Catherine, Myriam},
+  booktitle={2018 International Conference on Content-Based Multimedia Indexing (CBMI)},
+  pages={1--6},
+  year={2018},
+  organization={IEEE}
+}
+
+@inproceedings{ma2019lungbrn,
+  title={Lungbrn: A smart digital stethoscope for detecting respiratory disease using bi-resnet deep learning algorithm},
+  author={Ma, Yi and Xu, Xinzi and Yu, Qing and Zhang, Yuhang and Li, Yongfu and Zhao, Jian and Wang, Guoxing},
+  booktitle={2019 IEEE Biomedical Circuits and Systems Conference (BioCAS)},
+  pages={1--4},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{gairola2021respirenet,
+  title={Respirenet: A deep neural network for accurately detecting abnormal lung sounds in limited data setting},
+  author={Gairola, Siddhartha and Tom, Francis and Kwatra, Nipun and Jain, Mohit},
+  booktitle={2021 43rd Annual International Conference of the IEEE Engineering in Medicine \& Biology Society (EMBC)},
+  pages={527--530},
+  year={2021},
+  organization={IEEE}
+}
+
+@inproceedings{wang2019bi,
+  title={Bi-ResNet: fully automated classification of unregistered contralateral mammograms},
+  author={Wang, Runze and Guo, Yanan and Wang, Wendao and Ma, Yide},
+  booktitle={Artificial Neural Networks and Machine Learning--ICANN 2019: Workshop and Special Sessions: 28th International Conference on Artificial Neural Networks, Munich, Germany, September 17--19, 2019, Proceedings 28},
+  pages={273--283},
+  year={2019},
+  organization={Springer}
+}
+
+@inproceedings{he2016deep,
+  title={Deep residual learning for image recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={770--778},
+  year={2016}
+}
