--- a/references.bib
+++ b/references.bib
@@ -182,3 +182,38 @@
   pages={770--778},
   year={2016}
 }
+
+@misc{dcaseDCASE2023Challenge,
+	author = {DCASE},
+	title = {{D}{C}{A}{S}{E}2023 {C}hallenge - {D}{C}{A}{S}{E} --- dcase.community},
+	howpublished = {\url{https://dcase.community/challenge2023/index}},
+	year = {2023},
+	note = {[Accessed 30-11-2023]},
+}
+
+@inproceedings{cozzatti2022variational,
+  title={Variational autoencoders for anomaly detection in respiratory sounds},
+  author={Cozzatti, Michele and Simonetta, Federico and Ntalampiras, Stavros},
+  booktitle={International Conference on Artificial Neural Networks},
+  pages={333--345},
+  year={2022},
+  organization={Springer}
+}
+
+@article{an2015variational,
+  title={Variational autoencoder based anomaly detection using reconstruction probability},
+  author={An, Jinwon and Cho, Sungzoon},
+  journal={Special lecture on IE},
+  volume={2},
+  number={1},
+  pages={1--18},
+  year={2015}
+}
+
+@Inproceedings{Giri2020,
+ author = {Ritwik Giri and Fangzhou Cheng and Karim Helwani and Srikanth V. Tenneti and Umut Isik and Arvindh Krishnaswamy},
+ title = {Group masked autoencoder based density estimator for audio anomaly detection},
+ year = {2020},
+ url = {https://www.amazon.science/publications/group-masked-autoencoder-based-density-estimator-for-audio-anomaly-detection},
+ booktitle = {Detection and Classification of Acoustic Scenes and Events Workshop 2020},
+}
