Proofread "Theoretical Background"

--- a/references.bib
+++ b/references.bib
@@ -217,3 +217,16 @@
  url = {https://www.amazon.science/publications/group-masked-autoencoder-based-density-estimator-for-audio-anomaly-detection},
  booktitle = {Detection and Classification of Acoustic Scenes and Events Workshop 2020},
 }
+
+@misc{backstrom2020introduction,
+  title={Introduction to speech processing},
+  author={B{\"a}ckstr{\"o}m, Tom and R{\"a}s{\"a}nen, Okko and Zewoudie, Abraham and Perez Zarazaga, Pablo and Das, Sneha and others},
+  year={2020}
+}
+
+@book{o1987speech,
+  title={Speech communications: Human and machine (IEEE)},
+  author={O'shaughnessy, Douglas},
+  year={1987},
+  publisher={Universities press}
+}
